--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>instagran.exercicio.devclub</title>
+    <title>Meu Primeiro Projeto-instagran.devclub</title>
 </head>
 
 <body>
