adicionei o modo resonsivo

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div class="div-container">
 
-        <img src="img/insta-logo.png">
+        <img src="img/insta-logo.png" class="img-insta-lg">
 
         <input placeholder="Telefone, nome de usúsario ou email" type="text">
         <input placeholder="Senha" type="password">
